--- a/20240704/css/ikea.css
+++ b/20240704/css/ikea.css
@@ -83,3 +83,29 @@ span a {
 h4 {
   margin-bottom: 16px;
 }
+.whole-wrap {
+  display: flex;
+  flex-direction: column;
+}
+footer {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+footer .utility-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  position: relative;
+  right: 10%;
+}
+footer .lang {
+  display: inline-flex;
+  align-items: center;
+  position: relative;
+  left: 3%;
+  border: 2px solid black;
+  padding: 10px;
+  border-radius: 50px;
+}
