--- a/20240704/css/ikea.css
+++ b/20240704/css/ikea.css
@@ -96,7 +96,7 @@ footer {
 footer .utility-wrap {
   display: flex;
   flex-wrap: wrap;
-  gap: 30px;
+  gap: 20px;
   position: relative;
   right: 10%;
 }
@@ -108,4 +108,8 @@ footer .lang {
   border: 2px solid black;
   padding: 10px;
   border-radius: 50px;
+}
+footer i:hover {
+  border: 1px solid #000;
+  border-radius: 20px;
 }
