--- a/20240704/css/blue_bottle.css
+++ b/20240704/css/blue_bottle.css
@@ -40,7 +40,7 @@ body {
 }
 header {
   width: 100%;
-  height: 62px;
+  height: 65px;
   background-color: white;
   box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.06);
   position: fixed;
@@ -75,11 +75,13 @@ header .utility-wrap span {
   letter-spacing: 2px;
   align-items: center;
   position: relative; /* 추가 */
+  padding: 20px 0 20px 0;
 }
 
 header .utility-wrap span a {
   text-decoration: none;
   color: black;
+  padding: 50px 0;
 }
 
 header .utility-wrap span a:hover {
@@ -98,11 +100,12 @@ header .utility-wrap span a:hover {
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
   z-index: 1;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   border-bottom: 1px solid #e5e5e5;
   border-right: 1px solid #e5e5e5;
   border-left: 1px solid #e5e5e5;
   padding: 5px 30px;
+  white-space: nowrap;
 }
 
 .submenu li {
@@ -121,20 +124,28 @@ header .utility-wrap span a:hover {
 .menu-item:hover .submenu {
   display: block; /* hover 시 보이도록 설정 */
 }
-section {
+.menu-item {
+  height: auto;
+}
+section.hero-page {
   height: 750px;
   width: 100%;
   background-image: url("https://www.bluebottlecoffeekorea.com/_next/image?url=https%3A%2F%2Fcdn.sanity.io%2Fimages%2Fcqfze8rg%2Fproduction%2Fafdc289973fe23dd7ff8034546e172d386e73d3b-1338x855.jpg&w=2048&q=75"),
     linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: white;
 }
-
 .hero-page-txt {
-  position: relative;
+  position: absolute;
   top: 80%;
-  left: 15%;
+  left: 250px;
   transform: translate(-50%, -50%);
   display: flex;
   justify-content: flex-start;
