--- a/한국주택공사 웹사이트 실습/css/hf.css
+++ b/한국주택공사 웹사이트 실습/css/hf.css
@@ -76,7 +76,7 @@ header .menu-wrap .main-wrap a {
 .section-wrap {
   padding: 150px 0 100px 0;
   background-color: #ecf0f7;
-  height: 100vh;
+  height: 100%;
 }
 .section-wrap section {
   display: flex;
@@ -92,6 +92,10 @@ header .menu-wrap .main-wrap a {
   margin: 40px 100px;
 }
 .section-wrap section .card-wrap .card a {
+  /* 
+    전체카드 최소w=380,최소h=460
+    bg-img 상하=center,좌우 카드w의 85%
+  */
   display: flex;
   background-image: url("https://bank.hf.go.kr/resources/images/MN/bg_main_slide02.jpg");
   object-fit: cover;
@@ -105,12 +109,16 @@ header .menu-wrap .main-wrap a {
   background-repeat: no-repeat;
   background-position: center 85%;
   box-sizing: border-box;
-  transition: all 0.3s;
 }
 .section-wrap section .card-wrap .card:last-child a {
+  /* card클래스 중 마지막 카드에만 적용 */
   background-image: url("https://bank.hf.go.kr/resources/images/MN/bg_main_slide01.jpg");
 }
 .section-wrap section .card-wrap .card a:hover {
+  /* 
+    카드에 hover시, 최소크기 480px로 확장 == 카드크기 480px로 확장
+    margint-top:-20px 옵션으로 위쪽 방향으로 확장 == margin의 음수값은 내부(안쪽)으로 마진값 생성
+  */
   min-height: 480px;
   margin-top: -20px;
   position: relative;
