--- a/한국주택공사 웹사이트 실습/css/hf.css
+++ b/한국주택공사 웹사이트 실습/css/hf.css
@@ -75,7 +75,7 @@ header .menu-wrap .main-wrap a {
   font-weight: bold;
 }
 .section-wrap {
-  padding: 150px 0 100px 0;
+  padding: 150px 0 80px 0;
   background-color: #ecf0f7;
   height: 100%;
 }
@@ -88,7 +88,8 @@ header .menu-wrap .main-wrap a {
 .section-wrap section .card-wrap {
   display: flex;
   flex-wrap: wrap;
-  gap: 40px;
+
+  gap: 30px;
   padding: 20px 25px 62px 25px;
   margin: 40px 100px;
 }
@@ -150,4 +151,111 @@ header .menu-wrap .main-wrap a {
   font-size: 36px;
   font-weight: bold;
   margin-top: 10px;
+}
+.page-wrap {
+  display: flex;
+}
+.page-wrap .page-btn button {
+  width: 16px;
+  height: 16px;
+  background-color: #bbbbbb;
+  border-radius: 100%;
+  border: none;
+}
+.page-wrap .page-btn .current-page {
+  cursor: pointer;
+  width: 24px;
+  height: 24px;
+  background-color: #0373e4;
+  border-radius: 100%;
+  border: none;
+}
+.page-wrap .page-btn button:hover {
+  cursor: pointer;
+  width: 24px;
+  height: 24px;
+  background-color: #0373e4;
+  border-radius: 100%;
+  border: none;
+}
+.category-container {
+  margin: 0 auto;
+  width: 1200px;
+  border-bottom: 1px solid #e5e5e5;
+}
+.category-wrap {
+  width: 100%;
+  height: 176px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.category {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 15px;
+  font-weight: bold;
+}
+.category .category-img i {
+  display: block;
+  width: 48px;
+  height: 48px;
+  margin: 0 auto 10px;
+  background-image: url(https://bank.hf.go.kr/resources/images/MH/icon_set_business.png);
+  background-repeat: no-repeat;
+  padding: 0 0 10px 0;
+}
+
+.inform-container {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.inform-container .inform-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+.inform-container .inform-wrap .inform-card-left {
+  width: 290px;
+  height: 120px;
+  background-color: #e5e5e5;
+  padding: 40px;
+}
+.inform-container .inform-wrap .inform-wrap-right {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 40px;
+}
+.inform-container .inform-wrap .inform-wrap-right .inform-card-right {
+  width: 370px;
+  height: 80px;
+  background-color: #0373e4;
+}
+footer {
+  padding: 30px 20px 25px 50px;
+  display: flex;
+  flex-direction: column;
+  width: 1200px;
+  margin: 0 auto;
+}
+footer .footer-des {
+  margin: 10px 0;
+  font-weight: bold;
+}
+footer .logo-wrap {
+  display: flex;
+  gap: 30px;
+}
+footer .logo-wrap .footer-logo {
+  width: 22px;
+  height: 28px;
+}
+footer .logo-wrap .footer-logo img {
+  width: 100%;
+  height: 100%;
 }
