--- a/한국주택공사 웹사이트 실습/css/hf.css
+++ b/한국주택공사 웹사이트 실습/css/hf.css
@@ -21,10 +21,11 @@ a {
   width: 100%;
 }
 header {
+  width: 1200px;
   height: 110px;
   display: flex;
   align-items: center;
-  margin: 0 140px;
+  margin: 0 auto;
   justify-content: space-between;
 }
 header .menu-wrap {
